--- a/apps/AppMenu.html
+++ b/apps/AppMenu.html
@@ -27,7 +27,7 @@
     <br>
     <div id= "content">
         <h2>System:</h2>
-        <button id="shutdown", onclick="window.close()">Shutdown</button>
+        <button id="shutdown", onclick="self.close()">Shutdown</button>
         <button id="restart", onclick="restart()">Restart</button>
 
         <br>
